# EcoLogical-Extractor

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEVELOPMENT.md  README.md  pyproject.toml  requirements-audio.txt  requirements-core.txt  requirements-dev.txt  requirements-ocr.txt  requirements.txt  requirements2.txt  requirements3.txt  setup.bat  setup.py  setup.sh  setup_env.py
data/ocr_output/: 1.txt  10.txt  100.txt  1000.txt  1002.txt  1003.txt  1004.txt  1005.txt  1006.txt  1007.txt  1008.txt  101.txt  1010.txt  1011.txt  1012.txt  1013.txt  1014.txt  1015.txt  1016.txt  1017.txt  1018.txt  1019.txt  102.txt  1020.txt  1021.txt  1022.txt  1023.txt  1024.txt  1025.txt  1026.txt  1027.txt  1028.txt  1029.txt  103.txt  1030.txt  1031.txt  1032.txt  1033.txt  1034.txt  1035.txt  (+1117 more)
data/text_output/: 1.txt  10.txt  100.txt  1000.txt  1002.txt  1003.txt  1004.txt  1005.txt  1008.txt  1009.txt  1010.txt  1011.txt  1012.txt  1013.txt  1014.txt  1015.txt  1016.txt  1017.txt  1018.txt  1019.txt  102.txt  1020.txt  1021.txt  1022.txt  1023.txt  1024.txt  1025.txt  1026.txt  1027.txt  1028.txt  1029.txt  103.txt  1030.txt  1031.txt  1032.txt  1033.txt  1034.txt  1035.txt  1036.txt  1037.txt  (+1058 more)
docs/: DEPENDENCIES.md
src/: __init__.py  extract_data.py  mp3_text_extraction.py  mp3transcriber.py  natural_entity_recognition.py  ocr_processing.py  pdf_text_extraction.py  setup_test.py  table_extraction.py
src/utils/: __init__.py  dependencies.py  external_deps.py
tests/: test_dependencies.py  test_environment.py  test_setup.py  test_setup_env.py
