[project]
name = "ecological-extractor"
version = "0.1.0"
description = "A tool for extracting geographic and keyword data from forestry PDFs"
dependencies = [
    "pymupdf",       # Fast PDF text extraction
    "pdfplumber",    # Extract structured text and tables
    "pytesseract",   # OCR for scanned PDFs
    "opencv-python", # Image preprocessing for OCR
    "spacy",         # NLP for named entity recognition
    "fuzzywuzzy",    # Fuzzy string matching
    "fasttext",      # Embeddings for improved entity recognition
    "numpy",         # Numerical processing
    "pandas",        # Data manipulation
    "duckdb",        # Fast SQL-based storage
    "sqlite-utils",  # SQLite-based metadata storage
    "requests",      # API integration (if needed for ContentDM)
    "flask",         # Lightweight web API for metadata integration
    "plotly",        # Interactive visualizations
    "geopandas",     # GIS-based processing
    "folium",        # Map visualizations
    "pytest",        # Unit testing framework
]

[build-system]
requires = ["uv"]
build-backend = "uv"